--- a/S4/C2/css/estilos.css
+++ b/S4/C2/css/estilos.css
@@ -12,7 +12,7 @@ p {
 h2 {
   font-family: 'Cookie', cursive;
 }
-post1 h2{
+post1 h2 {
   font-family: 'Great Vibes', cursive;
 
 }
@@ -31,3 +31,17 @@ h2 {
   font-size: 30px;
 
 }
+/*1. */
+.titulo {
+background-color: #41C6CC ;
+ }
+
+ .banner img {
+   width: 100%;
+   height: 200%;
+ }
+
+ #perfil img {
+   margin: 10% 10%;
+   border-radius: 100%;
+ }
